proptest-attributes/tests/compile-fail/method.stderr
error: The `#[proptest]` macro cannot be applied to a method.
 --> $DIR/method.rs:7:21
  |
7 |     fn function_arn(&self) {}
  |                     ^
